# deepcode-vsa

./: .coverage  .dockerignore  .env.backup.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE.md  CONFIGURACAO-COMPLETA.md  DOCKER.md  Dockerfile.backend  Dockerfile.frontend  LANGSMITH_SETUP.md  Makefile  PWA-IMPLEMENTADO.md  README.md  STACK.md  STATUS-INTEGRACOES.md  TESTAR-INTEGRACOES.md  TESTE-TOGGLES.md  docker-compose.backup.yml  docker-compose.prod.yml  docker-compose.yml  layout.md  models.yaml  opencode.json  pyproject.toml  requirements.txt  spec_teste.md  tmp_rag_test.md
.agent/: ANALISE-UNIFIED-AGENT-PERFORMANCE.md  ARCHITECTURE.md  CORRECAO-PERSISTENCIA-POSTGRESQL.md  FIX-AUTO-LOAD-MESSAGES.md  FIX-PERFORMANCE-CRITICAL-LOGGING.md  FIX-PERFORMANCE-INPUT-LAG.md  FIX-TOGGLES-PERSISTENCE.md  GUIA-TESTE-PERSISTENCIA.md  MCP-SERVERS-CONFIGURADOS.md  PROBLEMA-PERSISTENCIA.md  RESUME-PROMPT.md  RESUMO-EXECUTIVO-27JAN.md  RESUMO-EXECUTIVO-PERSISTENCIA.md  RESUMO-SESSAO-28-JAN-2026.md  STATUS-PROJETO-28-JAN-2026.md  STATUS-RESUMO-27JAN.md  TESTE-PERSISTENCIA-RESULTADO.md
.agent/agents/: vsa-developer.md
.agent/rules/: GEMINI.md
.agent/workflows/: vsa.md
.ai/: context.md  handoff.md  orchestration.md  progress.md
.ai/agents/: agent-agendamentos.md  agent-atendimento.md  agent-financeiro.md  agent-informacoes.md  agent-ouvidoria.md  agent-rh.md  agent-superintendencia.md  agent-triagem.md
.ai/ide-configs/: .cursorrules  CLAUDE.md  antigravity.md  codex.md  opencode.md
.claude/: mcp.json.example
.opencode/agents/: security-auditor.md  vsa-developer.md
api/: __init__.py  main.py
api/middleware/: __init__.py  auth.py
api/models/: __init__.py  agents_admin.py  artifacts.py  auth.py  automation.py  planning.py  projects.py  requests.py  responses.py
api/routes/: __init__.py  agents.py  agents_admin.py  auth.py  automation.py  chat.py  chat.py.vsa_backup  config.py  export.py  files.py  images.py  knowledge.py  planning.py  projects.py  queue.py  rag.py  reports.py  threads.py
backend/: langgraph.json  requirements.txt
backend/agents/: __init__.py  (+1 more)
core/: __init__.py  auth.py  cache.py  celery_app.py  checkpointing.py  config.py  database.py  jobs.py  notifications.py  scheduler.py  tasks.py
docs/: ADICIONAR_MODELOS.md  CODEBASE.md  CORRECAO-PERSISTENCIA-NECESSARIA.md  DEBUG-MOBILE-ERROR.md  IMPLEMENTACAO-PWA-COMPLETA.md  ITIL-CLASSIFICACAO-PT-BR.md  MVP-STATUS.md  PRD-REVISADO.md  PRD.md  PROBLEMAS-PERSISTENCIA-IDENTIFICADOS.md  PWA-GUIDE.md  README.md  RESUMO-FINAL-TESTES-PERSISTENCIA.md  RESUMO-INTEGRACAO-LINEAR.md  RESUMO-PWA-FINAL.md  RESUMO-TESTES-PERSISTENCIA.md  SEGURANCA-CREDENCIAIS.md  TESTES-PERSISTENCIA-COMPLETOS.md  n8n-workflows.md  readme-2.md
frontend/: .gitignore  IMPLEMENTATION_NOTES.md  README.md  jest.config.js  models.yaml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
scripts/: __init__.py  add_error_handling.py  analyze_excel.py  aplicar-correcoes.sh  cleanup_checkpoints.py  configurar-ip.sh  corrigir-frontend.sh  create_initial_user.py  diagnostico-backend.sh  diagnostico-fetch.sh  docker-cleanup.sh  env_manager.py  fetch_trace.py  fix-docker.sh  fix_chat_checkpointer.py  force_test_save.py  init-db.sh  push-to-github.sh  rag_ingest.py  rag_test.py  rebuild-containers.sh  setup-files-schema.sh  test-backend.sh  test-scheduler-prod.sh  test_excel_report.py  test_integrations.py  test_linear_project.py  test_persistence.py  test_planner_node.py
tests/: conftest.py
(+326 files in other folders)
