[project]
name = "deepcode-vsa"
version = "1.0.0"
description = "Virtual Support Agent for IT Management - Intelligent Agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "DeepCode Team" }
]
keywords = ["ai", "agent", "langgraph", "itsm", "glpi", "zabbix"]

dependencies = [
    # LangGraph & LangChain
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-tavily>=0.2.12",
    "langchain-text-splitters>=0.3.0",
    "langgraph-checkpoint>=3.0.1",
    "langgraph-checkpoint-postgres>=3.0.1",

    # HTTP & Async
    "httpx>=0.27.0",

    # Config & Validation
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",

    # Database
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",

    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",

    # Document Processing
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",

    # Automation & Scheduling
    "apscheduler==3.10.4",
    "sqlalchemy>=2.0.23",
    "croniter>=2.0.1",

    # Celery & Queue
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "flower>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest-cov>=6.0.0",
]
cli = [
    # CLI dependencies (planned for v2.0)
    "typer>=0.15.0",
    "rich>=13.9.0",
]

# CLI entry point deferred to v2.0
# [project.scripts]
# vsa = "deepcode_vsa.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.isort]
known-first-party = ["core", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api"]
